--- a/index.html
+++ b/index.html
@@ -22,13 +22,87 @@
           </li>
         </ul>
       </nav>
+      <contacts>
+        <a href="">info@devstudio.com</a>
+        <a href="">+11 (000) 111-11-11</a>
+      </contacts>
     </header>
     <main>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section>
+        <h1>Effective Solutions<br />for Your Business</h1>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li><img src="./images/desktop.jpg" alt="desktop" /></li>
+          <li><img src="./images/phone.jpg" alt="mobile phone" /></li>
+          <li><img src="./images/laptop.jpg" alt="laptop" /></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img src="./images/img1.jpg" alt="image1" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/img2.jpg" alt="image2" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/img3.jpg" alt="image3" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/img4.jpg" alt="image4" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <a href="./index.html">Web Studio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
