--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Web Studio</title>
   </head>
   <body>
     <header>
@@ -30,6 +30,7 @@
     <main>
       <section>
         <h1>Effective Solutions<br />for Your Business</h1>
+        <button type="button">Order Service</button>
       </section>
       <section>
         <ul>
