--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <logo><a href="./index.html">Web Studio</a></logo>
+      <a href="./index.html">Web Studio</a>
       <nav>
         <ul>
           <li>
@@ -22,10 +22,8 @@
           </li>
         </ul>
       </nav>
-      <contacts>
-        <a href="">info@devstudio.com</a>
-        <a href="">+11 (000) 111-11-11</a>
-      </contacts>
+      <a href="">info@devstudio.com</a>
+      <a href="">+11 (000) 111-11-11</a>
     </header>
     <main>
       <section>
