--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">Web Studio</a>
+      <p>Web Studio</p>
       <nav>
         <ul>
           <li>
@@ -27,10 +27,11 @@
     </header>
     <main>
       <section>
-        <h1>Effective Solutions<br />for Your Business</h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2>Feature</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -65,31 +66,33 @@
       <section>
         <h2>What are we doing</h2>
         <ul>
-          <li><img src="./images/desktop.jpg" alt="desktop" /></li>
-          <li><img src="./images/phone.jpg" alt="mobile phone" /></li>
-          <li><img src="./images/laptop.jpg" alt="laptop" /></li>
+          <li><img src="./images/desktop.jpg" alt="desktop" width="360" /></li>
+          <li>
+            <img src="./images/phone.jpg" alt="mobile phone" width="360" />
+          </li>
+          <li><img src="./images/laptop.jpg" alt="laptop" width="360" /></li>
         </ul>
       </section>
       <section>
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/img1.jpg" alt="image1" />
+            <img src="./images/img1.jpg" alt="image1" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img2.jpg" alt="image2" />
+            <img src="./images/img2.jpg" alt="image2" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img3.jpg" alt="image3" />
+            <img src="./images/img3.jpg" alt="image3" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img4.jpg" alt="image4" />
+            <img src="./images/img4.jpg" alt="image4" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -97,7 +100,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">Web Studio</a>
+      <a href="">Web Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
