--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header>
-      <p>Web Studio</p>
       <nav>
+        <a href="./index.html">Web Studio</a>
         <ul>
           <li>
             <a href="">Studio</a>
@@ -22,8 +22,12 @@
           </li>
         </ul>
       </nav>
-      <a href="">info@devstudio.com</a>
-      <a href="">+11 (000) 111-11-11</a>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111"></a>+11 (000) 111-11-11</li>
+        </ul>
+      </address>
     </header>
     <main>
       <section>
@@ -100,7 +104,7 @@
       </section>
     </main>
     <footer>
-      <a href="">Web Studio</a>
+      <a href="./index.html">Web Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
